--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -23,10 +23,19 @@
                 </a>
 
                 <div class="collapse navbar-collapse" id="navbarToggle">
-                    <div class="nav navbar-nav navbar-right">
+                    <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{{ url_for('about') }}">Tentang</a>
+                    </div>
+                    <div class="navbar-nav">
                         <a class="nav-item nav-link" href="{{ url_for('keluar') }}">Keluar</a>
                     </div>
+                </div>
+
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/how-to-use">HOW TO USE</a></li>
+                        <li><a href="/about">ABOUT</a></li>
+                    </ul>
                 </div>
 
 
