--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "main_layout.html" %}
 {% block content %}
 <center>
-<h1>About Wescap</h1><br/>
+<h1>Panduan Wescap</h1><br/>
 </center>
 <h4>Wescap (Web Scraper Application) Ini adalah aplikasi yang dibuat untuk melakukan pengambilan data dari website</h4>
 <h2> Bagaimana cara menggunakannya? MUDAH </h2>
