--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -2,41 +2,34 @@
 <html lang="en">
 
 <head>
+    <title>Wescap</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-    <title>Wescap</title>
-    <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
-
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-
-    <header class="site-header">
-        <div class="container">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-            <a class="navbar-brand mr-4" href="/">
+            <a class="navbar-brand" href="/">
                 <font color="white"><strong>Wescap</strong></font>
             </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                     <div class="collapse navbar-collapse" id="navbarToggle">
-                        <div class="navbar-nav mr-auto">
-                            <a class="nav-item nav-link" href="{{ url_for('about') }}">Tentang</a>
+                        <div class="navbar-nav ml-auto">
+                            <a class="nav-item nav-link" href="{{ url_for('about') }}">Panduan</a>
                             <a class="nav-item nav-link" href="{{ url_for('keluar') }}">Keluar</a>
                         </div>
                     </div>
-
         </nav>
-        </div>
-
-    </header>
 
     <main role="main" class="container-fluid">
         <div class="container" >
