--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 <h4>Wescap (Web Scraper Application) Ini adalah aplikasi yang dibuat untuk melakukan pengambilan data dari website</h4>
 <h2> Bagaimana cara menggunakannya? MUDAH </h2>
 <h5>
-    1. Masukkan term dan lokasi yang sesuai dengan daftar pencarian dibawah (dengan huruf kecil semua)<br/>
+    1. Masukkan term dan lokasi yang sesuai dengan daftar pencarian dibawah<br/>
     2. Klik <strong>"Mulai Scraping"</strong><br/>
     3. Jika sesuai maka <strong>Wescap</strong> hasil dari scraping<br/>
     4. Anda dapat mengunduhnya ke dalam file csv untuk mendapatkan data yang lebih lengkap
@@ -34,7 +34,7 @@
     3. London
     4. Uk
 </h5>
-
+<h6>!!!Huruf dapatterdeteksi jika menggunakan huruf kapital semua/kecil semua/depannya aja yang kapital<br/>Jadi jangan randam!!!</h6>
 <br/>
 <h4>Mohon maaf, untuk data selain itu masih dalam pengembangan. Terimakasih</h4>
 <br/>
