--- a/templates/hasil.html
+++ b/templates/hasil.html
@@ -26,7 +26,7 @@
                         <td>{{data['address']}}</td>
                         <td>{{data['post']}}</td>
                         <td>{{data['telp']}}</td>
-                         <td><a href="{{data['web']['href']|safe}}">{{data['web']|safe}} </a></td>
+                        <td ><a href="https://{{data['web']}}" target="_blank"  >{{data['web']}} </a></td>
 
                       </tr>
                     {% endfor %}
